<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clay_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_margin"
        android:paddingBottom="28dp">

        <TextView
            style="@style/Clay.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namaz_offset_title" />

        <TextView
            style="@style/Clay.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/namaz_offset_hint"
            android:textSize="13sp" />

        <include
            android:id="@+id/rowFajr"
            layout="@layout/item_prayer_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <include
            android:id="@+id/rowDhuhr"
            layout="@layout/item_prayer_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <include
            android:id="@+id/rowAsr"
            layout="@layout/item_prayer_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <include
            android:id="@+id/rowMaghrib"
            layout="@layout/item_prayer_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <include
            android:id="@+id/rowIsha"
            layout="@layout/item_prayer_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/btnResetOffsets"
            style="@style/Clay.TileLabel"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_clay_button"
            android:gravity="center"
            android:text="@string/reset_offsets" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
