<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clay_bg"
    android:padding="@dimen/screen_margin">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Clay.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tasbeeh_zehra_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhaseLabel"
        style="@style/Clay.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvZikrArabic"
        style="@style/Clay.Arabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhaseLabel" />

    <TextView
        android:id="@+id/tvRemaining"
        style="@style/Clay.Counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvZikrArabic" />

    <FrameLayout
        android:id="@+id/btnTap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_clay_button_round"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRemaining"
        app:layout_constraintWidth_percent="0.72">

        <TextView
            android:id="@+id/tvTapHint"
            style="@style/Clay.TileLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tap_to_count" />
    </FrameLayout>

    <TextView
        android:id="@+id/btnReset"
        style="@style/Clay.TileLabel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_clay_button"
        android:gravity="center"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTap" />

</androidx.constraintlayout.widget.ConstraintLayout>
